# RUSTScrapling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-04-rust-scrapling.md
scripts/: ci.sh
src/: lib.rs  main.rs
src/core/: attributes_handler.rs  mod.rs  storage.rs  text_handler.rs  text_handlers.rs
src/fetchers/: client.rs  config.rs  constants.rs  mod.rs  proxy.rs  response.rs  search.rs
src/parser/: mod.rs  selector.rs  selector_generation.rs  selectors.rs  translator.rs
src/spiders/: cache.rs  checkpoint.rs  engine.rs  mod.rs  request.rs  response.rs  result.rs  robots.rs  scheduler.rs  session.rs  spider.rs
tests/: core_attributes_handler.rs  core_storage.rs  core_text_handler.rs  engine_crawl.rs  fetchers_client.rs  fetchers_config.rs  integration_test.rs  parser_selector.rs  parser_selector_generation.rs  spiders_request.rs  spiders_result.rs  spiders_scheduler.rs  spiders_session.rs
