[package]
name = "rust_scrapling"
version = "0.1.0"
edition = "2021"
description = "A Rust port of Scrapling - modern web scraping framework"

[dependencies]
scraper = "0.22"
ego-tree = "0.10"
markup5ever = "0.14"
cssparser = "0.34"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
http = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
sha2 = "0.10"
url = "2"
thiserror = "2"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
