[package]
name = "rust_scrapling"
version = "0.1.0"
edition = "2021"
description = "A Rust port of Scrapling - modern web scraping framework with CSS selectors, async HTTP, and spider-based crawling"
authors = ["Liohtml"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Liohtml/RUSTScrapling"
homepage = "https://github.com/Liohtml/RUSTScrapling"
keywords = ["scraping", "web-scraping", "html-parser", "css-selectors", "crawler"]
categories = ["web-programming", "parser-implementations", "command-line-utilities"]
readme = "README.md"
# Real MSRV: the dependency tree (cookie_store, time, icu_*) requires 1.88,
# and the committed Cargo.lock is v4 (needs Cargo >= 1.78). Verified by the
# `msrv` CI job; the previously declared 1.75 did not actually build.
rust-version = "1.88"
# Not yet released on crates.io (README documents a git dependency). Guard
# against an accidental `cargo publish` reserving the name permanently.
publish = false

[dependencies]
scraper = "0.22"
ego-tree = "0.10"
markup5ever = "0.14"
cssparser = "0.34"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
http = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "bundled" statically links a vendored SQLite for portability. SQLite CVEs
# therefore require a crate bump rather than an OS update — Dependabot (see
# .github/dependabot.yml) surfaces those bumps as PRs, and `cargo audit` in CI
# flags any known advisory in the meantime.
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
sha2 = "0.10"
url = "2"
thiserror = "2"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
